# carthamin

./: .gitignore  README.rst  code_map.md  implementation_progress.md  refactor_plan.md
carthamin-core/: Cargo.toml  run_tests.bat
carthamin-core/src/: filter.rs  lib.rs  regexopt.rs  registry.rs  scanner.rs  style.rs  token.rs  unistring.rs  util.rs
carthamin-core/src/bindings/: classes.rs  lex.rs  mod.rs  style.rs
carthamin-core/src/formatter/: html.rs  irc_bbcode.rs  mod.rs  other.rs  terminal.rs  terminal256.rs
carthamin-core/src/lexer/: abap.rs  abnf.rs  actionscript.rs  actionscript3.rs  ada.rs  adl.rs  agda.rs  aheui.rs  alloy.rs  ambienttalk.rs  amdgpu.rs  ampl.rs  angular2.rs  angular2html.rs  antlr.rs  antlractionscript.rs  antlrcpp.rs  antlrcsharp.rs  antlrjava.rs  antlrobjectivec.rs  antlrperl.rs  antlrpython.rs  antlrruby.rs  apacheconf.rs  apdlexer.rs  apl.rs  applescript.rs  arduino.rs  arrow.rs  arturo.rs  asc.rs  asn1.rs  aspectj.rs  asymptote.rs  augeas.rs  autohotkey.rs  autoit.rs  awk.rs  bare.rs  basemakefile.rs  (+516 more)
carthamin-core/src/style/: generated.rs  mod.rs
generators/: gen_lexers.py  gen_styles.py  gen_unistring.py
tests/: test_compatibility.py  test_style_compatibility.py  test_unicode_parity.py
