[package]
name = "carthamin"
version = "0.1.1"
edition = "2021"
description = "A Rust reimplementation of Pygments with Python bindings"
license = "BSD-2-Clause"

[lib]
name = "carthamin"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
regex = "1.11"
thiserror = "2"
once_cell = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
pyo3 = { version = "0.28", features = ["extension-module", "macros"] }

[profile.release]
lto = true
opt-level = 3
