[package]
name = "carthamin"
version = "0.2.0"
edition = "2021"
description = "A Rust reimplementation of Pygments with Python bindings"
license = "BSD-2-Clause"

[lints.rust]
text_direction_codepoint_in_literal = "allow"

[lib]
name = "carthamin"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
regex = "1.11"
thiserror = "2"
once_cell = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
pyo3 = { version = "0.28", features = ["extension-module", "macros"] }

[profile.release]
lto = true
opt-level = 3
